MINT-1918 Fixed scrolling. Fixed overlay z-index. Fixed close/open logic.

--- a/src/layouts/partials/DrawerMainMenu/DrawerMainMenu.scss
+++ b/src/layouts/partials/DrawerMainMenu/DrawerMainMenu.scss
@@ -25,7 +25,7 @@
   height: 100%;
 }
 
-.chronWalletLogo {
+.chronoWalletLogo {
   display: flex;
   height: 65px;
   img {
